lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__stream_incomplete_maps_to_length.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "type": "stream_start"
  },
  {
    "type": "text_start",
    "text_id": null
  },
  {
    "type": "text_delta",
    "delta": "Trunc",
    "text_id": null
  },
  {
    "type": "finish",
    "finish_reason": "length",
    "usage": {
      "input_tokens": 10,
      "output_tokens": 128,
      "reasoning_tokens": 0,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "resp_stream",
      "model": "gpt-test",
      "provider": "openai",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "text",
            "data": "Trunc"
          }
        ]
      },
      "finish_reason": "length",
      "usage": {
        "input_tokens": 10,
        "output_tokens": 128,
        "reasoning_tokens": 0,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": {
        "id": "resp_stream",
        "model": "gpt-test",
        "status": "incomplete",
        "output": [],
        "usage": {
          "input_tokens": 10,
          "output_tokens": 128
        }
      },
      "warnings": [],
      "rate_limit": null
    }
  }
]
