lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__stream_text_happy_path_events.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "type": "stream_start"
  },
  {
    "type": "text_start",
    "text_id": null
  },
  {
    "type": "text_delta",
    "delta": "Hel",
    "text_id": null
  },
  {
    "type": "text_delta",
    "delta": "lo",
    "text_id": null
  },
  {
    "type": "finish",
    "finish_reason": "stop",
    "usage": {
      "input_tokens": 9,
      "output_tokens": 4,
      "reasoning_tokens": 1,
      "cache_read_tokens": 2,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "resp_stream",
      "model": "gpt-test",
      "provider": "openai",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "text",
            "data": "Hello"
          }
        ]
      },
      "finish_reason": "stop",
      "usage": {
        "input_tokens": 9,
        "output_tokens": 4,
        "reasoning_tokens": 1,
        "cache_read_tokens": 2,
        "cache_write_tokens": 0
      },
      "raw": {
        "id": "resp_stream",
        "model": "gpt-test",
        "status": "completed",
        "output": [],
        "usage": {
          "input_tokens": 11,
          "output_tokens": 5,
          "input_tokens_details": {
            "cached_tokens": 2
          },
          "output_tokens_details": {
            "reasoning_tokens": 1
          }
        }
      },
      "warnings": [],
      "rate_limit": null
    }
  }
]
