lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__system_and_tools_encode.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/responses",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "Bearer test-key"
    ],
    [
      "content-length",
      "385"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ]
  ],
  "body": {
    "model": "gpt-test",
    "input": [
      {
        "type": "message",
        "role": "user",
        "content": [
          {
            "type": "input_text",
            "text": "Hello"
          }
        ]
      }
    ],
    "instructions": "Be concise",
    "temperature": 0.5,
    "max_output_tokens": 128,
    "tools": [
      {
        "type": "function",
        "name": "search",
        "description": "Search files",
        "parameters": {
          "type": "object",
          "properties": {
            "query": {
              "type": "string"
            }
          }
        }
      }
    ],
    "store": false,
    "include": [
      "reasoning.encrypted_content"
    ]
  }
}
